--- a/fiche-produit.html
+++ b/fiche-produit.html
@@ -21,7 +21,7 @@
 
 </head>
 
-        <body>
+        <body class="heigtauto">
 		<header class="bgc">
 			<h1>
 				<img class="logo" src="img/oriphoto-logo.png" alt="Logo d'Oriphoto"/>riPhoto
