--- a/fiche-produit.html
+++ b/fiche-produit.html
@@ -35,7 +35,7 @@
 		<section id="ficheduproduit" class="ficheduproduit conteneur__demie">
 		<img id="imageduproduit" class="article-image" alt="Photo du produit">
 		<h2 class="bgc">fiche du <span id="nomduproduit"></span></h2>
-		<div class="flex-box conteneur__bleu">
+		<div class="flexbox conteneur__bleu">
 			<div class="ficheproduit-contenant__gauche">
 				<div class="ficheproduit-contenu">
 					<p class="ficheduproduit-titre">Description :</p>
