--- a/fiche-produit.html
+++ b/fiche-produit.html
@@ -28,14 +28,14 @@
 			</h1>
 			<nav class="flexbox">
 				<a href="index.html" class="focus">Accueil<i class="fas fa-caret-right"></i></a>
-				<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i></span id="nombredeproduit">0</span></a>
+				<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i><span id="nombredeproduit">0</span></a>
 			</nav>
 		</header>
 		<main>
 		<section id="ficheduproduit" class="ficheduproduit conteneur__demie">
 		<img id="imageduproduit" class="article-image" alt="Photo du produit">
 		<h2 class="bgc">fiche du <span id="nomduproduit"></span></h2>
-		<div class="flexbox conteneur__bleu">
+		<div class="flex-box conteneur__bleu">
 			<div class="ficheproduit-contenant__gauche">
 				<div class="ficheproduit-contenu">
 					<p class="ficheduproduit-titre">Description :</p>
