--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</h1>
 			<nav class="flexbox">
 				<a href="index.html" class="focus">Accueil<i class="fas fa-caret-right"></i></a>
-				<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i></a>
+				<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i><span id="nombredeproduit">0</span></a>
 			</nav>
 		</header>
 	<main id="main">
