--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
 
 
 	<!-- Scripts JS -->
+	<script src="js/ajax.js"></script>
+	
+	
+	
+	
 <script src="js/productslist.js"></script>
 	<script>
 		allProductsList()
