--- a/mon-panier.html
+++ b/mon-panier.html
@@ -3,89 +3,55 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="shortcut icon" type="image/png" href="img/oriphoto-favicon.png">
 	<title>OriPhoto</title>
 	<meta name="description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages">
-
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<script src="https://kit.fontawesome.com/9376b337f5.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Cookie&family=Poppins&display=swap" rel="stylesheet">
-	</head>
-	<body class="heigtauto">
+
+</head>
+<body>
 		<header class="bgc">
 			<h1>
-					<img class="logo" src="img/oriphoto-logo.png" alt="Logo d'Oriphoto"/>riPhoto
+				<img class="logo" src="img/oriphoto-logo.png" alt="Logo d'Oriphoto"/>riPhoto
 			</h1>
 			<nav class="flexbox">
 				<a href="index.html" class="focus">Accueil<i class="fas fa-caret-right"></i></a>
-				<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i></a>
+				<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i><span id="nombredeproduit">0</span></a>
 			</nav>
 		</header>
-		<main>
+	<main>
 			<h2 class="principal bgc">mon panier</h2>
 			<div id="resumepanier">
 				<p id="paniervide">Votre panier est actuellement vide</p>
-				<button class="btn btn__achat bgc majuscule focus"id="retournersurlacceuil"><i class="fas fa-caret-left"></i>retourner sur l'acceuil</button>
-			</div>
-			<section id="panierutilisateur">
-					<div class="panier-tableau flexbox bgc">
-						<div class="panier-tableau__image">
-							<a href="url produit">
-								<img src="img/vcam_1.jpg" alt="description image">
-							</a>
-						</div>
-						<div class="panier-tableau__descriptionduproduit">
-							<a href="/products/finalstraw?variant=15352984993858">FinalStraw</a>
-							<p id="nomduproduitpanier">Healthy Coral / Rainbow</p>
-							<a>
-										<small>supprimer</small>
-							</a>
-						</div>
-						<div class="panier-tableau__prix">
-							<p id="prixduproduitpanier">650 €</p>
-						</div>
-						<div class="panier-tableau__quantite">
-							<div>
-								<button type="button" data-id="" data-qty="0">
-									<span aria-hidden="true">−</span>
-								</button>
-								<input type="text" value="1" min="1" data-id="" aria-label="quantity" pattern="[0-9]*" name="updates[]" class="produitsvaleur">
-								<button type="button"  data-id="" data-qty="11">
-									<span aria-hidden="true">+</span>
-								</button>
-							</div>
-						</div>
-						<div class="panier-tableau__soustotal" data-label="Total">
-							<p id="totalpanier">650 €</p>
-						</div>
-					</div>
-			</section>
-			<div><p>Le total de votre commande est de <span id="totalpanier">650 €</span>.</p><p> Afin de valider votr commande, il ne vous reste plus qu'à completer le formulaire ci-dessous :</p></div>
-			<section class="conteneur__demie">
+				<a class="btn btn__achat bgc majuscule focus"id="retournersurlacceuil"href="index.html"><i class="fas fa-caret-left"></i>retourner sur l'acceuil</a>
+		</div>
+		<section class="conteneur__demie">
 				<form method="post" name="formulairedecommande">
 					<fieldset>
 						<legend>Votre Adresse :</legend>
 						<div class="souspartie">
-							<label for="nom">Nom : </label>
-							<input type="text" id="nom" class=" " size="23"  required name="nom">
+							<label for="nomclient">Nom *</label>
+							<input type="text" placeholder="Votre nom" id="nomclient" class=" " size="23"  pattern="^\D*$" required name="nomclient">
 
-							<label for="prenom">Prénom :</label>
-							<input type="text" id="prenom" class=" " size="16" required name="prenom"></div>
+							<label for="prenomclient">Prénom *</label>
+							<input type="text" placeholder="Votre prénom" id="prenomclient" class=" " size="16" pattern="^\D*$" required name="prenomclient"></div>
 						<div class="souspartie">
-							<label for="mail">E-mail :</label>
-							<input type="email" id="mail" class=" " size="56" required name="mail"></div>
+							<label for="emailclient">Email *</label>
+							<input type="email" placeholder="Votre email" id="emailclient" class=" " size="56" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required name="emailclient"></div>
 						<div class="souspartie">
-							<label for="address">Adresse :</label>
-							<input type="text" id="address" class="address" size="56" required name="address"><br/>
+							<label for="adresseclient">Adresse *</label>
+							<input type="text" placeholder="Votre adresse postale" id="adresseclient" class="address" size="56" required name="adresseclient"><br/>
 					
-							<label for="ville">Ville :</label>
-							<input type="text" id="ville" class=" " size="23" required name="ville"></div>
+							<label for="villeclient">Ville *</label>
+							<input type="text" placeholder="Votre ville" id="villeclient" class=" " size="23" required name="villeclient"></div>
 					</fieldset>  
 					<input type="button" value="Valider la commande" class="btn bgc majuscule focus" id="envoiformulaire">
 				</form>
 			</section>
-		</main>
-		<footer  class="bgc flexbox">
+	</main>
+	<footer  class="bgc flexbox">
 			<div>
 				<a href="index.html" title="Lien vers Twitter"><i class="fa fa-twitter icon-social"></i></a>
 			</div>
@@ -96,9 +62,9 @@
 				<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
 			</div>
 		</footer> 
-		<script src="ajax.js"></script>
-
-
-		<script src="panier.js"></script>
-    </body>
+	<script src="js/pannier.js"></script>
+	<script>
+		validForm()
+	</script>
+</body>
 </html>
