--- a/mon-panier.html
+++ b/mon-panier.html
@@ -72,6 +72,6 @@
 				<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
 			</div>
 		</footer> 
-	<script src="js/pannier.js"></script>
+	<script src="js/panier.js"></script>
 </body>
 </html>
