--- a/index.html
+++ b/index.html
@@ -52,14 +52,11 @@
 
 
 	<!-- Scripts JS -->
+<script src="ajax.js"></script>
 	
 	
 	
-	
-<script src="js/productslist.js"></script>
-	<script>
-		allProductsList()
-	</script>
+<script src="productslist.js"></script>
 	<!-- Scripts JS END -->
 </body>
 </html>
