--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
 
 	<!-- Scripts JS -->
-<script src="ajax.js"></script>
+<script src="js/ajax.js"></script>
 	
 	
 	
-<script src="productslist.js"></script>
+<script src="js/productslist.js"></script>
 	<!-- Scripts JS END -->
 </body>
 </html>
