--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -36,6 +36,15 @@
 		<div>
 			<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
 		</div>
-	</footer> 
-    </body>
+		</footer> 
+
+
+	<!-- Scripts JS -->
+<script src="js/ajax.js"></script>
+	
+	
+	
+<script src="js/confirmationcommande.js"></script>
+	<!-- Scripts JS END -->
+</body>
 </html>
