--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -24,6 +24,10 @@
 		</header>
 		<main>
 			<div id="confirmationdecommande"class="conteneur__bleu conteneur__demie">
+					<h2 class="principal bgc">confimation de commande</h2>
+					<p>Merci pour votre achat <span class="element" id="firstName">Emanuela</span>,</p>
+					<p>Votre numéro de commande est le <span id="orderId" class="element">00000000001</span></p>
+					<p>Pour revenir à l'accueil de notre boutique cliquez sur ce lien <a href="index.html" class="element focus">Accueil</a><i class="acceuil fas fa-caret-right"></i></p>
 			</div>
 		</main>
 	<footer  class="bgc flexbox">
