--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -7,7 +7,7 @@
 	<title>OriPhoto</title>
 	<meta name="description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages">
 
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<script src="https://kit.fontawesome.com/9376b337f5.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Cookie&family=Poppins&display=swap" rel="stylesheet">
 </head>
@@ -25,8 +25,8 @@
 		<main>
 			<div id="confirmationdecommande"class="conteneur__bleu conteneur__demie">
 					<h2 class="principal bgc">confimation de commande</h2>
-					<p>Merci pour votre achat <span class="element" id="firstName">Emanuela</span>,</p>
-					<p>Votre numéro de commande est le <span id="orderId" class="element">00000000001</span></p>
+					<p>Merci pour votre achat <span class="element" id="firstName"></span>,</p>
+					<p>Votre numéro de commande est le <span id="orderId" class="element"></span></p>
 					<p>Pour revenir à l'accueil de notre boutique cliquez sur ce lien <a href="index.html" class="element focus">Accueil</a><i class="acceuil fas fa-caret-right"></i></p>
 			</div>
 		</main>
