--- a/fiche-produit.html
+++ b/fiche-produit.html
@@ -35,7 +35,7 @@
 					<li>
 						<a href="index.html" class="focus">Accueil<i class="fas fa-caret-right"></i></a>
 					</li>
-					<li class="cart">
+					<li class="panier">
 						<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i><span id="nombredeproduit">0</span></a>
 					</li>
 				</ul>
