--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<title>OriPhoto</title>
-	<meta name="description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+		<title>OriPhoto</title>
+		<meta name="description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages">
 
-	<link rel="stylesheet" href="css/style.css">
-	<script src="https://kit.fontawesome.com/9376b337f5.js" crossorigin="anonymous"></script>
-	<link href="https://fonts.googleapis.com/css2?family=Cookie&family=Poppins&display=swap" rel="stylesheet">
-</head>
-
-        <body class="heigtauto">
+		<link rel="stylesheet" href="style.css">
+		<script src="https://kit.fontawesome.com/9376b337f5.js" crossorigin="anonymous"></script>
+		<link href="https://fonts.googleapis.com/css2?family=Cookie&family=Poppins&display=swap" rel="stylesheet">
+	</head>
+	<body class="heigtauto">
 		<header class="bgc">
 			<nav class="flexbox">
 				<ul>
@@ -34,31 +33,48 @@
 		</header>
 		<main>
 			<div id="confirmationdecommande"class="conteneur__bleu conteneur__demie">
-					<h2 class="principal bgc">confimation de commande</h2>
-					<p>Merci pour votre achat <span class="element" id="firstName"></span>,</p>
-					<p>Votre numéro de commande est le <span id="orderId" class="element"></span></p>
-					<p>Pour revenir à l'accueil de notre boutique cliquez sur ce lien <a href="index.html" class="element focus">Accueil</a><i class="acceuil fas fa-caret-right"></i></p>
+				<article id="confirmation">
+					<h2>Commande validée</h2>
+					<p class="user">Merci pour votre commande</p>
+
+					<p>Nous l'avons reçu et la traiterons dans les plus brefs délais.</p>
+
+					<p class="order-id">Votre numéro de commande est le</p>
+
+					<p class="total-price">/p>Votre commande s'élève à un prix total de <span class="price"></span>
+					</p>
+				  </article>
 			</div>
 		</main>
-	<footer  class="bgc flexbox">
-		<div>
-			<a href="index.html" title="Lien vers Twitter"><i class="fa fa-twitter icon-social"></i></a>
-		</div>
-		<div>
-			<a href="index.html" title="Lien vers Facebook"><i class="fa fa-facebook icon-social"></i></a>
-		</div>
-		<div>
-			<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
-		</div>
+		<footer  class="bgc flexbox">
+			<div>
+				<a href="index.html" title="Lien vers Twitter"><i class="fa fa-twitter icon-social"></i></a>
+			</div>
+			<div>
+				<a href="index.html" title="Lien vers Facebook"><i class="fa fa-facebook icon-social"></i></a>
+			</div>
+			<div>
+				<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
+			</div>
+		</footer> <footer  class="bgc flexbox">
+			<div>
+				<a href="index.html" title="Lien vers Twitter"><i class="fa fa-twitter icon-social"></i></a>
+			</div>
+			<div>
+				<a href="index.html" title="Lien vers Facebook"><i class="fa fa-facebook icon-social"></i></a>
+			</div>
+			<div>
+				<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
+			</div>
 		</footer> 
 
 
-	<!-- Scripts JS -->
-<script src="js/ajax.js"></script>
+		<!-- Scripts JS -->
+		<script src="js/ajax.js"></script>
 	
 	
 	
-<script src="js/confirmationcommande.js"></script>
-	<!-- Scripts JS END -->
-</body>
+		
+		
+    </body>
 </html>
