--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-	<link rel="shortcut icon" type="image/png" href="img/oriphoto-favicon.png">
-	<title>OriPhoto</title>
-	<meta name="description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages">
-	<!-- Twitter Card data -->
-	<meta name="twitter:card" content="summary">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+		<link rel="shortcut icon" type="image/png" href="img/oriphoto-favicon.png">
+		<title>OriPhoto</title>
+		<meta name="description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages">
+		<!-- Twitter Card data -->
+		<meta name="twitter:card" content="summary">
 	
-	<!-- Open Graph data -->
-	<meta property="og:title" content="OriPhoto"/>
-	<meta property="og:type" content="website"/>
-	<meta property="og:url" content="http://www.oriphoto.fr/"/>
-	<meta property="og:image" content="https://i.imgur.com/nLTiPMv.png"/>
-	<meta property="og:description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages"/>
-	<link rel="stylesheet" href="css/style.css">
-	<script src="https://kit.fontawesome.com/9376b337f5.js" crossorigin="anonymous"></script>
-	<link href="https://fonts.googleapis.com/css2?family=Cookie&family=Poppins&display=swap" rel="stylesheet">
+		<!-- Open Graph data -->
+		<meta property="og:title" content="OriPhoto"/>
+		<meta property="og:type" content="website"/>
+		<meta property="og:url" content="http://www.oriphoto.fr/"/>
+		<meta property="og:image" content="https://i.imgur.com/nLTiPMv.png"/>
+		<meta property="og:description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages"/>
+		<link rel="stylesheet" href="css/style.css">
+		<script src="https://kit.fontawesome.com/9376b337f5.js" crossorigin="anonymous"></script>
+		<link href="https://fonts.googleapis.com/css2?family=Cookie&family=Poppins&display=swap" rel="stylesheet">
 
-</head>
-<body>
+	</head>
+	<body>
 		<header class="bgc">
 			<nav class="flexbox">
 				<ul>
@@ -40,33 +40,33 @@
 				</ul>
 			</nav>
 		</header>
-	<main id="main">
-		<div id="erreur">
+		<main id="main">
+			<div id="erreur">
 				<div class="conteneur__erreur">
-					<p id="erreur-message" class=""><i class="fas fa-cogs" aria-hidden="true"></i> Veuillez recharger ou réessayer plus tard. Si l'erreur persiste, veuillez contacter le Webmaster</p>
+					<p id="erreur-message" ><i class="fas fa-cogs" aria-hidden="true"></i> Veuillez recharger ou réessayer plus tard. Si l'erreur persiste, veuillez contacter le Webmaster</p>
 					<p id="erreur-titre" class="bgc__secondaire majuscule">erreur interne</p>
 				</div>
 			</div>
-	</main>
-	<footer  class="bgc flexbox">
-		<div>
-			<a href="index.html" title="Lien vers Twitter"><i class="fa fa-twitter icon-social"></i></a>
-		</div>
-		<div>
-			<a href="index.html" title="Lien vers Facebook"><i class="fa fa-facebook icon-social"></i></a>
-		</div>
-		<div>
-			<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
-		</div>
-	</footer> 
+		</main>
+		<footer  class="bgc flexbox">
+			<div>
+				<a href="index.html" title="Lien vers Twitter"><i class="fa fa-twitter icon-social"></i></a>
+			</div>
+			<div>
+				<a href="index.html" title="Lien vers Facebook"><i class="fa fa-facebook icon-social"></i></a>
+			</div>
+			<div>
+				<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
+			</div>
+		</footer> 
 
 
-	<!-- Scripts JS -->
-<script src="js/ajax.js"></script>
+		<!-- Scripts JS -->
+		<script src="js/ajax.js"></script>
 	
 	
 	
-<script src="js/productslist.js"></script>
-	<!-- Scripts JS END -->
-</body>
+		<script src="js/productslist.js"></script>
+		<!-- Scripts JS END -->
+	</body>
 </html>
