--- a/fiche-produit.html
+++ b/fiche-produit.html
@@ -25,7 +25,7 @@
 		<header class="bgc">
 			<nav class="flexbox">
 				<ul>
-					<li>
+					<li class="logo__header">
 						<a href="index.html" class="focus">
 							<h1>
 								<img class="logo" src="img/oriphoto-logo.png" alt="Logo d'Oriphoto"/>riPhoto
