--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -15,7 +15,7 @@
 		<header class="bgc">
 			<nav class="flexbox">
 				<ul>
-					<li>
+					<li class="logo__header">
 						<a href="index.html" class="focus">
 							<h1>
 								<img class="logo" src="img/oriphoto-logo.png" alt="Logo d'Oriphoto"/>riPhoto
@@ -70,7 +70,7 @@
 
 
 		<!-- Scripts JS -->
-		<script src="js/confirmationcommande.js"></script>
+		<script src="js/ajax.js"></script>
 	
 	
 	
